WebUI Dialog Improvements and Bugfix for renaming folders (#1390)
* Split dialogs into foreground/background and added status dialog

* Add action to showOneInput dialog to change action button text

* Edior Save button now enabled/disabled based on modified status

* Fixed renaming of folders not working

* Show just the filename/folder rather than full path in rename dialog

* Updated info dialog

* Long file names truncated when displayed

--- a/embedded_resources/web_interface/index.css
+++ b/embedded_resources/web_interface/index.css
@@ -31,10 +31,14 @@ body {
     padding: 2px 7px;
     text-decoration: none;
 }
-.btn-action:hover,
+.btn-action:hover:not(:disabled),
 .btn-action.active {
     background-color: var(--color);
     color: var(--background);
+}
+.btn-action:disabled  {
+    filter: brightness(50%);
+    cursor: not-allowed;
 }
 .icon-action {
     border: 0;
@@ -125,6 +129,12 @@ svg > g, svg > path {
     width: 100%;
     border: 0px;
     border-collapse: collapse;
+    table-layout: fixed;
+}
+.container .content .table .col-name {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .container .content .table .col-size {
     width: 90px;
@@ -154,7 +164,7 @@ svg > g, svg > path {
 .table .col-action.executable .act-play {
     display: inherit;
 }
-.dialog-background {
+.dialog-foreground, .dialog-background {
     position: fixed;
     top: 0;
     left: 0;
@@ -164,6 +174,12 @@ svg > g, svg > path {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.dialog-foreground {
+    z-index: 1000;
+}
+.dialog-background {
+    z-index: 500;
 }
 .dialog {
     border: 1px solid var(--color);
@@ -194,7 +210,7 @@ svg > g, svg > path {
     border-top: 1px solid var(--color);
     text-align: right;
 }
-.dialog.loading .dialog-body {
+.dialog.status .dialog-body {
     padding: 10px 0;
     text-align: center;
 }
@@ -266,4 +282,12 @@ svg > g, svg > path {
     vertical-align: center;
     display: flex;
     align-items: center;
+}
+.oinput-file-name {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 250px;
+    display: block;
+    float: right;
 }
